# esp8266RTOSArduCore

./: .gitignore  CMakeLists.txt  Develop.md  README.md  boards.txt  package.json  platform.txt  post_install.bat  post_install.sh  requirements.txt  setup_env.bat  setup_env.sh
components/arduino/: CMakeLists.txt  CMakeListsWithAutomaticIncludes.txt
components/esp8266/include/: esp_smartconfig.h
components/esp8266/ld/: eagle.app.v6.ld
components/esp8266/source/: smartconfig.c
cores/esp8266/: Arduino.h  Esp.cpp  Esp.h  HardwareSerial.cpp  HardwareSerial.h  MD5Builder.h  StreamString.cpp  StreamString.h  WCharacter.h  WString.cpp  WString.h  esp32-hal-cpu.c  esp32-hal-cpu.h  esp32-hal-gpio.c  esp32-hal-gpio.h  esp32-hal-log.h  esp32-hal-misc.c  esp32-hal-time.c  esp32-hal-uart.c  esp32-hal-uart.h  esp32-hal.h  main.cpp  pins_arduino_deprecated.h  wiring_pulse.cpp
libraries/ESP8266RTOS/: library.properties
libraries/ESP8266RTOS/examples/ChipID/GetChipID/: GetChipID.ino
libraries/ESP8266RTOS/examples/DeepSleep/ExternalWakeUp/: ExternalWakeUp.ino
libraries/ESP8266RTOS/examples/DeepSleep/TimerWakeUp/: TimerWakeUp.ino
libraries/ESP8266RTOS/examples/FreeRTOS/: FreeRTOS.ino
libraries/ESP8266RTOS/examples/FreeRTOS/WrapperFreeRTOS/: WrapperFreeRTOS.ino
libraries/ESP8266RTOS/examples/GPIO/FunctionalInterrupt/: FunctionalInterrupt.ino
libraries/ESP8266RTOS/examples/GPIO/GPIOInterrupt/: GPIOInterrupt.ino
libraries/ESP8266RTOS/examples/ResetReason/: ResetReason.ino
libraries/ESP8266RTOS/examples/WrapperFreeRTOS/: WrapperFreeRTOS.ino
libraries/WebServer/examples/AdvancedWebServer/: AdvancedWebServer.ino
libraries/WiFi/src/: WiFiClient.cpp  WiFiClient.h  WiFiGeneric.cpp  WiFiGeneric.h  WiFiSTA.cpp  WiFiSTA.h  WiFiServer.cpp
libraries/WiFiClientSecure/examples/WiFiClientInsecure/: WiFiClientInsecure.ino
libraries/WiFiClientSecure/examples/WiFiClientPSK/: WiFiClientPSK.ino
libraries/WiFiClientSecure/examples/WiFiClientSecure/: WiFiClientSecure.ino
libraries/WiFiClientSecure/examples/WiFiClientSecureEnterprise/: WiFiClientSecureEnterprise.ino
libraries/WiFiClientSecure/src/: ssl_client.cpp
libraries/WiFiProv/src/: WiFiProv.cpp  WiFiProv.h
libraries/WrapperFreeRTOS/: LICENSE  README.md  library.properties
libraries/WrapperFreeRTOS/examples/BasicMutex/: BasicMutex.ino  TaskHello.h  TaskWorld.h
libraries/WrapperFreeRTOS/examples/BasicQueue/: BasicQueue.ino  TaskHelloQ.h  TaskWorldQ.h
libraries/WrapperFreeRTOS/examples/BasicSemaphore/: BasicSemaphore.ino  TaskConsummer.hpp  TaskProducer.hpp
libraries/WrapperFreeRTOS/examples/BasicTask/: BasicTask.cpp  BasicTask.hpp  BasicTask.ino
libraries/WrapperFreeRTOS/examples/CrossedReferences/: Controlador.cpp  Controlador.hpp  CrossedReferences.ino
libraries/WrapperFreeRTOS/src/: Task.cpp  Task.h  WrapperFreeRTOS.h
package/: package_esp8266RTOS_index.json  package_esp8266RTOS_index.template.json
tools/: compile.bat  compile.py  compile.sh  compileWindows.sh  compile_linux.py  compile_windows.py  createPreproc.py  createProject.py  createTemplate.py  dummy.py  dummy.sh  flash.bat  flash.py  flash.sh  flashWindows.sh  flash_linux.py  flash_windows.py  get_include_files.py  preCompile.bat  preCompile.sh  set_user_values.py  size.py  size_linux.py  size_windows.py  windowsPathToUnixPath.bat
tools/cmake/: build.cmake
tools/idfTemplate/: CMakeLists.txt  sdkconfig  sdkconfig.old
tools/idfTemplate/main/: Kconfig.projbuild
